과제 제출 방법을 벌명.

--- a/w4/index.html
+++ b/w4/index.html
@@ -7,6 +7,10 @@
     <title>DC231:W4</title>
   </head>
   <body>
+    <h2>4주차</h2>
+    <h3>과제</h3>
+    <a href="sdsdsd.html">과제~~로가는링크</a>
+
     4주차 문서입니다.
     <a href="../index.html">인덱스로 돌아가기</a>
   </body>
