--- a/w4/index.html
+++ b/w4/index.html
@@ -8,10 +8,15 @@
   </head>
   <body>
     <h2>4주차</h2>
-    <h3>과제</h3>
-    <a href="sdsdsd.html">과제~~로가는링크</a>
+    <h3>4주차 과제입니다.</h3>
 
-    4주차 문서입니다.
+    <ol>
+      <li><a href="inclass/stp1.html">stp1</a></li>
+      <li><a href="inclass/stp2.html">stp2</a></li>
+      <li><a href="inclass/stp3.html">stp3</a></li>
+      <li><a href="inclass/stp4.html">stp4</a></li>
+    </ol>
+
     <a href="../index.html">인덱스로 돌아가기</a>
   </body>
 </html>
