10주차에 p태그를 넣음

--- a/w10/index.html
+++ b/w10/index.html
@@ -7,7 +7,7 @@
     <title>DC231:W1</title>
   </head>
   <body>
-    10주차 문서입니다.
+    <p>10주차 문서입니다.</p>
     <a href="../index.html">인덱스로 돌아가기</a>
   </body>
 </html>
