--- a/w5/index.html
+++ b/w5/index.html
@@ -7,7 +7,15 @@
     <title>DC231:W5</title>
   </head>
   <body>
-    5주차 문서입니다.
+    <h1>5주차 문서입니다.</h1>
+    <h2>금요일 수업</h2>
+    <!-- ul>(li>a[href="friday/stp$.html"]>{stp$})*4 -->
+    <ul>
+      <li><a href="friday/stp1.html">stp1</a></li>
+      <li><a href="friday/stp2.html">stp2</a></li>
+      <li><a href="friday/stp3.html">stp3</a></li>
+      <li><a href="friday/stp4.html">stp4</a></li>
+    </ul>
     <a href="../index.html">인덱스로 돌아가기</a>
   </body>
 </html>
