--- a/w6/index.html
+++ b/w6/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     6주차 문서입니다.
+    <h2>금요일 수업</h2>
+    <ul>
+      <li><a href="friday/stp1.html">stp1</a></li>
+    </ul>
     <a href="../index.html">인덱스로 돌아가기</a>
   </body>
 </html>
