--- a/w6/index.html
+++ b/w6/index.html
@@ -7,7 +7,7 @@
     <title>DC231:W6</title>
   </head>
   <body>
-    6주차 문서입니다.
+    <h1>6주차 문서입니다</h1>
     <h2>금요일 수업</h2>
     <ul>
       <li><a href="friday/stp1.html">stp1</a></li>
