--- a/w6/index.html
+++ b/w6/index.html
@@ -7,10 +7,16 @@
     <title>DC231:W6</title>
   </head>
   <body>
-    <h1>6주차 문서입니다</h1>
+    <h1>6주차 문서</h1>
     <h2>금요일 수업</h2>
     <ul>
       <li><a href="friday/stp1.html">stp1</a></li>
+    </ul>
+    <h2>복습영상</h2>
+    <ul>
+      <li><a href="wrapUp/stp1/stp1.html">stp1</a></li>
+      <li><a href="wrapUp/stp2/stp2.html">stp2</a></li>
+      <li><a href="wrapUp/stp3/stp3.html">stp3</a></li>
     </ul>
     <a href="../index.html">인덱스로 돌아가기</a>
   </body>
