--- a/w6/wrapUp/stp5/stp5.html
+++ b/w6/wrapUp/stp5/stp5.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style/stp3.css" />
-    <title>stp3</title>
+    <link rel="stylesheet" href="style/stp5.css" />
+    <title>stp5</title>
   </head>
   <body>
     <div class="section nav">
@@ -28,15 +28,20 @@
     <div id="hero1" class="section main">
       <div class="container">
         <div class="wrapper">
-          <h2>Lorem ipsum dolor sit amet.</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
-            incidunt neque consectetur sed iure magni vero quis atque cupiditate
-            facere.
-          </p>
-          <div class="button">try it now</div>
-          <div class="button button--type-text">learn more</div>
-          <div class="main__media">media goes here</div>
+          <div class="main__text">
+            <h2>Lorem ipsum dolor sit amet.</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
+              ullam maiores quis impedit similique nemo commodi, officia
+              repudiandae ut vero iusto eaque harum sint quibusdam iure, maxime,
+              quisquam id. Amet perspiciatis laboriosam unde. Nostrum tempora
+              illo aspernatur velit alias esse dolorum, amet, praesentium
+              voluptatem provident expedita facere impedit quidem delectus.
+            </p>
+            <div class="button">try it now</div>
+            <div class="button button--type-text">learn more</div>
+          </div>
+          <div class="main__media"></div>
         </div>
       </div>
     </div>
