--- a/w7/index.html
+++ b/w7/index.html
@@ -7,7 +7,28 @@
     <title>DC231:W7</title>
   </head>
   <body>
-    7주차 문서입니다.
+    <h1>7주차 문서입니다.</h1>
+    <h2>영상의 html들</h2>
+    <ul>
+      <li>
+        <a href="wrapUp/objective1/objective1.html">objective1</a>
+        <ul>
+          <li><a href="wrapUp/stp1/stp1.html">stp1</a></li>
+        </ul>
+        <ul>
+          <li><a href="wrapUp/stp2/stp2.html">stp2</a></li>
+        </ul>
+        <ul>
+          <li><a href="wrapUp/stp3/stp3.html">stp3</a></li>
+        </ul>
+        <ul>
+          <li><a href="wrapUp/stp4/stp4.html">stp4</a></li>
+        </ul>
+        <ul>
+          <li><a href="wrapUp/stp5/stp5.html">stp5</a></li>
+        </ul>
+      </li>
+    </ul>
     <a href="../index.html">인덱스로 돌아가기</a>
   </body>
 </html>
