8주차과제footer수정

--- a/w8/wrapUp/stp1/stp1.html
+++ b/w8/wrapUp/stp1/stp1.html
@@ -688,18 +688,16 @@
       <div class="container">
         <div class="wrapper">
           <div class="column1">
-            <ul>
-              <li>이용약관</li>
-              <li>서비스운영정책</li>
-              <li>유료서비스 이용약관</li>
-              <li>청소년 보호 정책</li>
-              <li>개인정보처리방침</li>
-              <li>쿠키정책</li>
-              <li>쿠키설정</li>
-            </ul>
+            <div>이용약관</div>
+            <div>서비스운영정책</div>
+            <div>유료서비스 이용약관</div>
+            <div>청소년 보호 정책</div>
+            <div>개인정보처리방침</div>
+            <div>쿠키정책</div>
+            <div>쿠키설정</div>
           </div>
           <div class="column2">
-            <p>© WEVERSE COMPANY Inc.Ver 2.7.0</p>
+            <div>© WEVERSE COMPANY Inc.Ver 2.7.0</div>
           </div>
         </div>
       </div>
