--- a/w8/index.html
+++ b/w8/index.html
@@ -10,9 +10,37 @@
     <h1>8주차 문서</h1>
     <h2>금요일 수업</h2>
     <ul>
-      <li><a href="friday/stp1/stp1.html">stp1</a></li>
+      <li><a href="friday/stp1/index.html">stp1</a></li>
+      <li><a href="friday/stp2/index.html">stp2</a></li>
+      <!-- ul>(a[href="fri/stp$index.heml"]>li>[stp$])*3 -->
     </ul>
-
+    <h2>8주차 복습 영상</h2>
+    <ul>
+      <a href="wrap/objective1/index.html"
+        ><li>
+          objective1
+          <ul>
+            <a href="wrap/stp1/index.html"><li>stp1</li></a>
+          </ul>
+        </li></a
+      >
+      <a href="wrap/objective2/index.html"
+        ><li>
+          objective2
+          <ul>
+            <a href="wrap/stp2/index.html"><li>stp2</li></a>
+          </ul>
+        </li></a
+      >
+      <a href="wrap/objective3/index.html"
+        ><li>
+          objective3
+          <ul>
+            <a href="wrap/stp3/index.html"><li>stp3</li></a>
+          </ul>
+        </li></a
+      >
+    </ul>
     <h2>과제</h2>
     <ul>
       <li><a href="wrapUp/stp1/stp1.html">stp1</a></li>
