--- a/w9/index.html
+++ b/w9/index.html
@@ -17,7 +17,7 @@
 
     <h2>과제</h2>
     <ul>
-      <li><a href="wrapUp/stp1/stp1.html">stp1</a></li>
+      <!-- <li><a href="wrapUp/stp1/stp1.html">stp1</a></li> -->
       <!-- <li><a href="wrapUp/stp2/stp2.html">stp2</a></li> -->
     </ul>
     <a href="../index.html">인덱스로 돌아가기</a>
