--- a/w10/index.html
+++ b/w10/index.html
@@ -7,7 +7,22 @@
     <title>DC231:W1</title>
   </head>
   <body>
-    <p>10주차 문서입니다.</p>
+    <h1>10주차 문서입니다.</h1>
+
+    <h2>금요일 수업</h2>
+    <ul>
+      <li><a href="friday/stp1/index.html">stp1</a></li>
+      <li><a href="friday/stp2/index.html">stp2</a></li>
+      <li><a href="friday/stp3/index.html">stp3</a></li>
+      <li><a href="friday/stp4/index.html">stp4</a></li>
+      <li><a href="friday/stp5/index.html">stp5</a></li>
+    </ul>
+    <!-- <ul>
+      <li><a href="friday/stp1/index.html">stp1</a></li>
+      <li><a href="friday/stp2/index.html">stp2</a></li>
+      <li><a href="friday/stp3/index.html">stp3</a></li>
+    </ul> -->
+
     <a href="../index.html">인덱스로 돌아가기</a>
   </body>
 </html>
