--- a/w9/index.html
+++ b/w9/index.html
@@ -10,16 +10,11 @@
     <h1>9주차 문서입니다.</h1>
     <h2>금요일 수업</h2>
     <ul>
-      <li><a href="friday/stp1/stp1.html">stp1</a></li>
-      <li><a href="friday/stp2/stp2.html">stp2</a></li>
-      <li><a href="friday/stp3/stp3.html">stp3</a></li>
+      <li><a href="friday/stp1/index.html">stp1</a></li>
+      <li><a href="friday/stp2/index.html">stp2</a></li>
+      <li><a href="friday/stp3/index.html">stp3</a></li>
     </ul>
 
-    <h2>과제</h2>
-    <ul>
-      <!-- <li><a href="wrapUp/stp1/stp1.html">stp1</a></li> -->
-      <!-- <li><a href="wrapUp/stp2/stp2.html">stp2</a></li> -->
-    </ul>
     <a href="../index.html">인덱스로 돌아가기</a>
   </body>
 </html>
