--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>SMU Digital Computing 2023</title>
   </head>
   <body>
+    <h1>DC231</h1>
     <ul>
       <li><a href="w1/index.html">1주차</a></li>
       <li><a href="w2/index.html">2주차</a></li>
@@ -19,9 +20,11 @@
       <li><a href="w8/index.html">8주차</a></li>
       <li><a href="w9/index.html">9주차</a></li>
       <li><a href="w10/index.html">10주차</a></li>
-      <!-- <img src="이미지주소" alt="이미지설명"> -->
-      <!-- <a href="주소">이름</a> -->
-
+      <li><a href="w11/index.html">11주차</a></li>
+      <li><a href="w12/index.html">12주차</a></li>
+      <li><a href="w13/index.html">13주차</a></li>
+      <li><a href="w14/index.html">14주차</a></li>
+      <li><a href="w15/index.html">15주차</a></li>
       <!-- (li>a[href="w$/index.html"]>{$$주차강의자료})*10 -->
     </ul>
   </body>
