10주차복습영상

--- a/w10/index.html
+++ b/w10/index.html
@@ -17,6 +17,13 @@
       <li><a href="friday/stp4/index.html">stp4</a></li>
       <li><a href="friday/stp5/index.html">stp5</a></li>
     </ul>
+    <h2>복습영상</h2>
+    <ul>
+      <li><a href="wrapUp/stp1/index.html">stp1</a></li>
+      <li><a href="wrapUp/stp2/index.html">stp2</a></li>
+      <li><a href="wrapUp/stp3/index.html">stp3</a></li>
+      <li><a href="wrapUp/stp4/index.html">stp4</a></li>
+    </ul>
     <!-- <ul>
       <li><a href="friday/stp1/index.html">stp1</a></li>
       <li><a href="friday/stp2/index.html">stp2</a></li>
