--- a/w10/index.html
+++ b/w10/index.html
@@ -23,6 +23,9 @@
       <li><a href="wrapUp/stp2/index.html">stp2</a></li>
       <li><a href="wrapUp/stp3/index.html">stp3</a></li>
       <li><a href="wrapUp/stp4/index.html">stp4</a></li>
+      <li><a href="wrapUp/stp5/index.html">stp5</a></li>
+      <li><a href="wrapUp/stp6/index.html">stp6</a></li>
+      <li><a href="wrapUp/stp7/index.html">stp7</a></li>
     </ul>
     <!-- <ul>
       <li><a href="friday/stp1/index.html">stp1</a></li>
