--- a/w10/wrapUp/stp6/index.html
+++ b/w10/wrapUp/stp6/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>w10 - stp4</title>
+    <title>w10 - stp6</title>
     <style>
       body {
         margin: 0;
@@ -29,6 +29,12 @@
       .box:hover {
         background-color: bisque;
       }
+      .box--clicked {
+        background-color: cornflowerblue;
+      }
+      .box--clicked:hover {
+        background-color: cornflowerblue;
+      }
     </style>
   </head>
   <body>
@@ -40,8 +46,11 @@
     </div>
   </body>
   <script>
-    console.log(document);
-    console.log(document.getElementById("box1"));
-    console.log(document.getElementsByClassName("box"));
+    let boxes = document.querySelectorAll(".box");
+    boxes.forEach((box) => {
+      box.onclick = function () {
+        box.classList.toggle("box--clicked");
+      };
+    });
   </script>
 </html>
