--- a/w13/index.html
+++ b/w13/index.html
@@ -19,6 +19,13 @@
       <!-- <li><a href="friday/stp5/index.html">stp5</a></li> -->
     </ul>
 
+    <h2>영상</h2>
+    <ul>
+      <li><a href="wrapUp/stp1/index.html">stp1</a></li>
+      <li><a href="wrapUp/stp2/index.html">stp2</a></li>
+      <li><a href="wrapUp/stp3/index.html">stp3</a></li>
+      <li><a href="wrapUp/stp4/index.html">stp4</a></li>
+    </ul>
     <a href="../index.html">인덱스로 돌아가기</a>
   </body>
 </html>
