--- a/w15/index.html
+++ b/w15/index.html
@@ -4,18 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DC231:W4</title>
+    <title>DC231:W15</title>
   </head>
   <body>
-    <h2>4주차</h2>
-    <h3></h3>
+    <h1>15주차 문서입니다.</h1>
 
-    <ol>
-      <li><a href="inclass/stp1.html">stp1</a></li>
-      <li><a href="inclass/stp2.html">stp2</a></li>
-      <li><a href="inclass/stp3.html">stp3</a></li>
-      <li><a href="inclass/stp4.html">stp4</a></li>
-    </ol>
+    <h2>과제</h2>
+    <ul>
+      <li><a href="friday/stp1/stp1.html">stp1</a></li>
+    </ul>
 
     <a href="../index.html">인덱스로 돌아가기</a>
   </body>
