--- a/w11/index.html
+++ b/w11/index.html
@@ -14,10 +14,11 @@
       <li><a href="friday/stp1/index.html">stp1</a></li>
       <li><a href="friday/stp2/index.html">stp2</a></li>
       <li><a href="friday/stp3/index.html">stp3</a></li>
-      <li><a href="friday/stp4/index.html">stp4</a></li>
-      <li><a href="friday/stp5/index.html">stp5</a></li>
     </ul>
-
+    <h2>복습영상</h2>
+    <ul>
+      <li><a href="wrapUp/stp3/index.html">stp3</a></li>
+    </ul>
     <a href="../index.html">인덱스로 돌아가기</a>
   </body>
 </html>
