--- a/w12/index.html
+++ b/w12/index.html
@@ -14,9 +14,11 @@
       <li><a href="friday/stp1/stp1.html">stp1</a></li>
       <li><a href="friday/stp2/stp2.html">stp2</a></li>
       <li><a href="friday/stp3/stp3.html">stp3</a></li>
-      <!-- <li><a href="friday/stp3/index.html">stp3</a></li> -->
-      <!-- <li><a href="friday/stp4/index.html">stp4</a></li> -->
-      <!-- <li><a href="friday/stp5/index.html">stp5</a></li> -->
+    </ul>
+    <h2>영상</h2>
+    <ul>
+      <li><a href="wrapUp/stp1/index.html">stp1</a></li>
+      <li><a href="wrapUp/stp2/index.html">stp2</a></li>
     </ul>
 
     <a href="../index.html">인덱스로 돌아가기</a>
