--- a/w15/index.html
+++ b/w15/index.html
@@ -2,18 +2,15 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DC231:W15</title>
+    <title>Document</title>
   </head>
   <body>
     <h1>15주차 문서입니다.</h1>
 
-    <h2>과제</h2>
+    <h2>금요일 수업</h2>
     <ul>
-      <li><a href="friday/stp1/stp1.html">stp1</a></li>
+      <li><a href="stp1/index.html">과제</a></li>
     </ul>
-
-    <a href="../index.html">인덱스로 돌아가기</a>
   </body>
 </html>
