--- a/w15/stp1/index.html
+++ b/w15/stp1/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <div class="wrapper">
-        <h1 id="title">영혼의 고리</h1>
+        <h1 id="title">길 - 영혼의 고리</h1>
       </div>
     </header>
     <div class="stickyWrapper">
@@ -93,16 +93,20 @@
         <section class="animTrigger" id="section5">
           <div class="wrapper">
             <h2></h2>
-            <p>
-              얼마나 잤는지 모르겠다. 집에 돌아온 아빠는 나를 깨웠다. 아빠는 술이 잔뜩
-              취해있었다. 나는 술에 취한 아빠가 싫었다. 자는 척 했다. 아빠는 화가 났는지
-              나를 안아서 창밖으로 내 던지려 하였다. 나는 혼비백산 하며 일어났다.
+            <p class="animTarget">얼마나 잤는지 모르겠다.</p>
+            <p class="animTarget">
+              집에 돌아온 아빠는 나를 깨웠다. 아빠는 술이 잔뜩 취해있었다. 나는 술에 취한
+              아빠가 싫었다. 자는 척 했다.
             </p>
           </div>
         </section>
         <section class="animTrigger" id="section6">
           <div class="wrapper">
-            
+            <p class="animTarget">
+              아빠는 화가 났는지 나를 안아서 창밖으로 내 던지려 하였다.
+            </p>
+          </div>
+        </section>
       </main>
       <aside>
         <h2 class="hide">links to each pages</h2>
@@ -116,10 +120,10 @@
           <a href="#section4">
             <li>page3</li>
           </a>
-          <a href="#section4">
+          <!-- <a href="#section4">
             <li>page4</li>
-          </a>
-          <a href="#section5">
+          </a> -->
+          <!-- <a href="#section5">
             <li>page5</li>
           </a>
           <a href="#section6">
@@ -130,13 +134,11 @@
           </a>
           <a href="#section8">
             <li>page8</li>
-          </a>
+          </a> -->
         </ol>
       </aside>
       <div class="progressBar"><div class="indicator"></div></div>
     </div>
-    <footer>
-      
-    </footer>
+    <footer></footer>
   </body>
 </html>
